Gesture discoverability area

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="med">Medium</string>
     <string name="lrg">Large</string>
     <string name="clear">Clear</string>
+    <string name="gestures">Touch to Draw</string>
 </resources>
